# PhotoBatch

./: README.md
PhotoBatch/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  CMakePresets.json  ConvertMode.cpp  ConvertMode.h  Mode.cpp  Mode.h  PhotoBatch.cpp  RenameMode.cpp  RenameMode.h  ResizeMode.cpp  ResizeMode.h  ScaleMode.cpp  ScaleMode.h  Utils.cpp  Utils.h
PhotoBatch/UnityTests/: CMakeLists.txt  TestArgumentParser.cpp  TestSum.cpp
